--- a/root/index.html
+++ b/root/index.html
@@ -69,7 +69,7 @@
                 <div class="col-custom-vw-8">
                     <div class="box box-double">
                         <div class="title">Welcome to EOU</div>
-                        <img src="images/box1.jpg" class="box-img box-image-double spacing-margin-top-half">
+                        <img src="images/Box1.jpg" class="box-img box-image-double spacing-margin-top-half">
                         <div class="image-caption background-blue">Small class sizes allow for a closer connection to the instructor, enhancing the learning experience.</div>
                         <button class="main-button color-white background-gold spacing-width-4 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                         <button class="main-button color-white background-green spacing-width-4 spacing-height-1 spacing-margin-top-half pull-right">Apply Now</button>
@@ -79,7 +79,7 @@
                 <div class="col-custom-vw-4">
                     <div class="box">
                         <div class="title">Programs</div>
-                        <img src="images/box2.jpg" class="box-img spacing-margin-top-half">
+                        <img src="images/Box2.jpg" class="box-img spacing-margin-top-half">
                         <div class="image-caption background-orange">Discover the various academic programs that EOU offers.</div>
                         <button class="main-button color-white background-gold spacing-width-4 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
@@ -88,7 +88,7 @@
                 <div class="col-custom-vw-4">
                     <div class="box">
                         <div class="title">Community</div>
-                        <img src="images/box3.jpg" class="box-img spacing-margin-top-half">
+                        <img src="images/Box3.jpg" class="box-img spacing-margin-top-half">
                         <div class="image-caption background-gold">With close proximity to downtown La Grande, students can easily access many of the local shops and attractions.</div>
                         <button class="main-button color-white background-gold spacing-width-4 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
@@ -97,7 +97,7 @@
                 <div class="col-custom-vw-8">
                     <div class="box box-double">
                         <div class="title">Sports</div>
-                        <img src="images/box4.jpg" class="box-img box-image-double spacing-margin-top-half">
+                        <img src="images/Box4.jpg" class="box-img box-image-double spacing-margin-top-half">
                         <div class="image-caption background-red">EOU football player about to score winning touchdown.</div>
                         <button class="main-button color-white background-gold spacing-width-4 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
@@ -106,7 +106,7 @@
                 <div class="col-custom-vw-4">
                     <div class="box">
                         <div class="title">Events &amp; Activities</div>
-                        <img src="images/box5.jpg" class="box-img spacing-margin-top-half">
+                        <img src="images/Box5.jpg" class="box-img spacing-margin-top-half">
                         <div class="image-caption background-orange">Art students create three-dimensional sculptures out of clay.</div>
                         <button class="main-button color-white background-gold spacing-width-4 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
