--- a/root/index.html
+++ b/root/index.html
@@ -51,11 +51,11 @@
 
             <div class="row social-button-row-2">
                 <div class="col-xs-3 col-xs-offset-6">
-                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1" onclick="window.location.href = 'http://www.facebook.com/eouadmissions';">f</button>
-                    <button class="main-button color-white background-light-blue spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://twitter.com/eoumountaineers';">t</button>
-                    <button class="main-button color-white background-brown spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://instagram.com/monty.mountaineer';">i</button>
-                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://www.eou.edu/feed/';">r</button>
-                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://www.youtube.com/eouniversity';">y</button>
+                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1" onclick="window.location.href = 'http://www.facebook.com/eouadmissions';"><object type="image/svg+xml" data="icons/facebook.svg">f</object></button>
+                    <button class="main-button color-white background-light-blue spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://twitter.com/eoumountaineers';"><object type="image/svg+xml" data="icons/twitter.svg">t</object></button>
+                    <button class="main-button color-white background-brown spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://instagram.com/monty.mountaineer';"><object type="image/svg+xml" data="icons/instagram.svg">i</object></button>
+                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://www.eou.edu/feed/';"><object type="image/svg+xml" data="icons/rss.svg">r</object></button>
+                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://www.youtube.com/eouniversity';"><object type="image/svg+xml" data="icons/youtube.svg">y</object></button>
                 </div>
             </div>
 
