--- a/root/index.html
+++ b/root/index.html
@@ -44,18 +44,18 @@
             </div>
 
             <div class="row social-button-row-1">
-                <div class="col-xs-3 col-xs-offset-6">
+                <div class="col-xs-3 social-button-row-offset">
                     <span class="tahoma-bold all-caps">Find us on:</span>
                 </div>
             </div>
 
             <div class="row social-button-row-2">
-                <div class="col-xs-3 col-xs-offset-6">
-                    <button class="main-button color-white background-blue spacing-width-1 spacing-height-1" onclick="window.location.href = 'http://www.facebook.com/eouadmissions';"><object type="image/svg+xml" data="icons/facebook.svg">f</object></button>
-                    <button class="main-button color-white background-light-blue spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://twitter.com/eoumountaineers';"><object type="image/svg+xml" data="icons/twitter.svg">t</object></button>
-                    <button class="main-button color-white background-brown spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://instagram.com/monty.mountaineer';"><object type="image/svg+xml" data="icons/instagram.svg">i</object></button>
-                    <button class="main-button color-white background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://www.eou.edu/feed/';"><object type="image/svg+xml" data="icons/rss.svg">r</object></button>
-                    <button class="main-button color-white background-red spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://www.youtube.com/eouniversity';"><object type="image/svg+xml" data="icons/youtube.svg">y</object></button>
+                <div class="col-xs-3 social-button-row-offset">
+                    <button class="main-button color-white button-with-icon background-blue spacing-width-1 spacing-height-1" onclick="window.location.href = 'http://www.facebook.com/eouadmissions';" style="background-image: url('icons/facebook.svg')"/>
+                    <button class="main-button color-white button-with-icon background-light-blue spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://twitter.com/eoumountaineers';" style="background-image: url('icons/twitter.svg')"/>
+                    <button class="main-button color-white button-with-icon background-brown spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://instagram.com/monty.mountaineer';" style="background-image: url('icons/instagram.svg')"/>
+                    <button class="main-button color-white button-with-icon background-orange spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'https://www.eou.edu/feed/';" style="background-image: url('icons/rss.svg')"/>
+                    <button class="main-button color-white button-with-icon background-red spacing-width-1 spacing-height-1 spacing-margin-left-1" onclick="window.location.href = 'http://www.youtube.com/eouniversity';" style="background-image: url('icons/youtube.svg')"/>
                 </div>
             </div>
 
