Added arrow icons

--- a/root/index.html
+++ b/root/index.html
@@ -38,8 +38,8 @@
 
             <div class="row nav-button-row">
                 <div class="col-xs-12">
-                    <button class="nav-button color-white background-red spacing-width-1 spacing-height-3" id="nav-left">&lt;</button> <!--data-toggle="tooltip" data-placement="right" title="Hold to scroll left"-->
-                    <button class="nav-button color-white background-red spacing-width-1 spacing-height-3 pull-right" id="nav-right">&gt;</button> <!--data-toggle="tooltip" data-placement="left" title="Hold to scroll right"-->
+                    <button class="nav-button color-white button-with-icon background-red spacing-width-1 spacing-height-3" id="nav-left" style="background-image: url('icons/arrowLeft.svg')"/> <!--data-toggle="tooltip" data-placement="right" title="Hold to scroll left"-->
+                    <button class="nav-button color-white button-with-icon background-red spacing-width-1 spacing-height-3 pull-right" id="nav-right" style="background-image: url('icons/arrowRight.svg')"/> <!--data-toggle="tooltip" data-placement="left" title="Hold to scroll right"-->
                 </div>
             </div>
 
