--- a/root/index.html
+++ b/root/index.html
@@ -21,12 +21,12 @@
              
             <div class="row spacing-margin-top-1 spacing-margin-left-half spacing-height-3">
                 <div class="col-xs-4">
-                    <button class="main-button color-white spacing-width-1 spacing-height-1"                       data-toggle="tooltip" data-placement="bottom" title="Search EOU">Se</button>
-                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Students">St</button>
-                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Faculty">Fa</button>
-                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Academics">Ac</button>
-                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Information">In</button>
-                    <button class="main-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Other">Ot</button>
+                    <button class="menu-button color-white spacing-width-1 spacing-height-1"                       data-toggle="tooltip" data-placement="bottom" title="Search EOU" style="background-image: url('icons/search.svg')"/>
+                    <button class="menu-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Students" style="background-image: url('icons/backpack.svg')"/>
+                    <button class="menu-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Faculty" style="background-image: url('icons/instructor.svg')"/>
+                    <button class="menu-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Academics" style="background-image: url('icons/cap.svg')"/>
+                    <button class="menu-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Information" style="background-image: url('icons/info.svg')"/>
+                    <button class="menu-button color-white spacing-width-1 spacing-height-1 spacing-margin-left-1" data-toggle="tooltip" data-placement="bottom" title="Other" style="background-image: url('icons/other.svg')"/>
                 </div>
             </div>
             
