--- a/root/index.html
+++ b/root/index.html
@@ -111,6 +111,125 @@
                         <button class="main-button color-white background-gold spacing-width-4 spacing-height-1 spacing-margin-top-half spacing-margin-left-1 pull-right">Learn More</button>
                     </div>
                 </div>
+
+                <div class="col-custom-vw-12">
+                    <div class="box">
+                        <div class="row">
+                            <div class="col-xs-3 col-xs-offset-2">
+                                <div class="title">Where to next?</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-custom-vw-12">
+                                <div class="box-footer background-blue">
+                                    <div class="row"> <!-- Empty row for spacing -->
+                                        &nbsp;
+                                    </div>
+                                    <div class="row"> <!-- ROW 1 -->
+                                        <div class="col-xs-2"> <!-- Column offsets aren't working for some reason, so I'm using empty columns -->
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <div class="title">Helpful Links</div>
+                                        </div>
+                                        <div class="col-xs-4">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <div class="title">Visiting EOU</div>
+                                        </div>
+                                    </div>
+                                    <div class="row spacing-margin-top-half"> <!-- ROW 2 -->
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-gold spacing-width-6 spacing-height-1">Contact Us</button>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-orange spacing-width-6 spacing-height-1">Other Option</button>
+                                        </div>
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-green spacing-width-6 spacing-height-1">Campus Tours</button>
+                                        </div>
+                                    </div>
+                                    <div class="row spacing-margin-top-half"> <!-- ROW 3 -->
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-gold spacing-width-6 spacing-height-1">Emergency Info</button>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-orange spacing-width-6 spacing-height-1">Other Option</button>
+                                        </div>
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-green spacing-width-6 spacing-height-1">Preview Day</button>
+                                        </div>
+                                    </div>
+                                    <div class="row spacing-margin-top-half"> <!-- ROW 4 -->
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-gold spacing-width-6 spacing-height-1">Bookstore</button>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-orange spacing-width-6 spacing-height-1">Other Option</button>
+                                        </div>
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-green spacing-width-6 spacing-height-1">Map &amp; Directions</button>
+                                        </div>
+                                    </div>
+                                    <div class="row spacing-margin-top-half"> <!-- ROW 5 -->
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-gold spacing-width-6 spacing-height-1">Pierce Library</button>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-orange spacing-width-6 spacing-height-1">Other Option</button>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <div class="title spacing-margin-top-half">Get the EOU app now</div>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-green spacing-width-6 spacing-height-1">Galleries</button>
+                                        </div>
+                                    </div>
+                                    <div class="row spacing-margin-top-half"> <!-- ROW 6 -->
+                                        <div class="col-xs-2">
+
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-gold spacing-width-6 spacing-height-1">Career Center</button>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-orange spacing-width-6 spacing-height-1">Other Option</button>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="app-button spacing-width-3 spacing-height-1" style="background-image: url('images/apple_app_store.png')" onclick="window.location.href = 'https://itunes.apple.com/us/app/goeou!/id1005618945?mt=8';"/>
+                                            <button class="app-button spacing-width-3 spacing-height-1 spacing-margin-left-half" style="background-image: url('images/google_play.png')" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=hr.apps.n206877150';"/>
+                                        </div>
+                                        <div class="col-xs-2">
+                                            <button class="main-button color-white background-green spacing-width-6 spacing-height-1">Event Calendar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div> <!-- END container div -->
@@ -128,7 +247,7 @@
         <script> //Scrolling Script - By Dalton Baird
             var SCROLL_AMOUNT = 0.1;        //Amount of spaces to scroll
             var SCROLL_OFFSET = 0;          //The current scroll offset
-            var SCROLL_MIN = -115;          //The minimum scroll offset
+            var SCROLL_MIN = -113.2;          //The minimum scroll offset
             var SCROLL_MAX = 0;             //The maximum scroll offset
             var SCROLL_FORCE = 0;           //The amount to scroll each frame
             var SCROLL_FORCE_MIN = -5;      //The minimum amount of scroll force
